# mip_sdk

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.txt  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  LICENSE.txt  README.md
bindings/python/: CMakeLists.txt
bindings/python/src/: commands_3dm.cpp  main.cpp  mip_python.cpp  mip_python.hpp
bindings/python/test/: main.py
examples/: CMakeLists.txt  README.md  device_info.cpp  example_utils.c  example_utils.cpp  example_utils.h  example_utils.hpp  mip_packet_example.c  mip_packet_example.cpp  ping.cpp  scan_ports.cpp  serial.c  serial.h  serial.hpp  serial_mip_device.cpp  serial_mip_device.hpp  tcp_mip_device.cpp  tcp_mip_device.hpp  threading.cpp  watch_imu.c  watch_imu.cpp
examples/AVR/: AVR.ino  CMakeLists.txt  CV7_example.cpp
examples/CSV/: csv.cpp  stringify.cpp  stringify.hpp
examples/CV5_15/: CV5_15_example.c  CV5_15_example.cpp
examples/CV7/: CV7_INS_simple_example.cpp  CV7_example.c  CV7_example.cpp
examples/CV7_INS/: CV7_INS_simple_example.cpp  CV7_INS_simple_ublox_example.cpp  simple_ublox_parser.hpp  ublox_device.hpp  ublox_parser.h
examples/CX5_15/: CX5_15_example.c  CX5_15_example.cpp
examples/CX5_GX5_45/: CX5_GX5_45_example.c  CX5_GX5_45_example.cpp
examples/CX5_GX5_CV5_15_25/: CX5_GX5_CV5_15_25_example.c  CX5_GX5_CV5_15_25_example.cpp
examples/Config/: config.cpp  config.hpp  config_demo.cpp  setting.hpp
examples/GQ7/: GQ7_example.c  GQ7_example.cpp
examples/GX5_15/: GX5_15_example.c  GX5_15_example.cpp
examples/GX5_45/: GX5_45_example.c  GX5_45_example.cpp
examples/MIP_binary_to_CSV_converter/: mip_binary_to_csv_converter.cpp  string_utilities.h
examples/PrettyPrinter/: main.cpp  stringify.cpp
examples/c/: CMakeLists.txt  examples_c.dox
examples/c/5_series/: CMakeLists.txt
examples/c/7_series/: CMakeLists.txt
examples/c/cv7/: CMakeLists.txt  cv7_example.c
examples/c/cx5_gx5_45/: cx5_gx5_45_example.c
examples/c/cx5_gx5_cv5_15_25/: cx5_gx5_cv5_15_25_example.c
examples/c/device_info/: CMakeLists.txt  README.md  device_info_example.c
examples/c/mip_packet/: CMakeLists.txt  README.md  mip_packet_example.c
examples/c/pretty_printer/: CMakeLists.txt  pretty_printer_example.c
examples/c/recording/: CMakeLists.txt  README.md  recording_example.c
examples/c/stream_imu/: CMakeLists.txt  stream_imu.c  stream_imu_example.c
examples/cpp/: CMakeLists.txt  examples_cpp.dox
examples/cpp/5_series/: CMakeLists.txt
examples/cpp/7_series/: CMakeLists.txt
examples/cpp/cv7/: CMakeLists.txt  cv7_example.cpp
examples/cpp/cv7_ins/: cv7_ins_example.cpp
examples/cpp/cx5_gx5_45/: cx5_gx5_45_example.cpp
examples/cpp/cx5_gx5_cv5_15_25/: cx5_gx5_cv5_15_25_example.cpp
examples/cpp/device_info/: CMakeLists.txt  README.md  device_info_example.cpp
examples/cpp/mip_packet/: CMakeLists.txt  README.md  mip_packet_example.cpp
examples/cpp/pretty_printer/: CMakeLists.txt  pretty_printer.cpp  pretty_printer_example.cpp  stringify.cpp
examples/cpp/recording/: CMakeLists.txt  README.md  recording_example.cpp
examples/cpp/stream_imu/: CMakeLists.txt  stream_imu.cpp  stream_imu_example.cpp
examples/cpp/threading/: CMakeLists.txt  threading.cpp  threading_example.cpp
examples/cpp/ublox/: CMakeLists.txt
examples/socket/: CMakeLists.txt  tcp.cpp  tcp.hpp
ext/: CMakeLists.txt
src/c/microstrain/: CMakeLists.txt  data_interceptor.c  data_interceptor.h  embedded_time.h  logging.c  logging.h  microstrain_all.h  platform.h  serialization.h  strings.c  strings.h
src/c/mip/: CMakeLists.txt  mip_all.h  mip_cmdqueue.c  mip_cmdqueue.h  mip_descriptors.c  mip_descriptors.h  mip_device_models.c  mip_device_models.h  mip_dispatch.c  mip_dispatch.h  mip_field.c  mip_field.h  mip_interface.c  mip_interface.h  mip_logging.c  mip_logging.h  mip_metadata.h  mip_offsets.h  mip_packet.c  mip_packet.h  mip_parser.c  mip_parser.h  mip_result.c  mip_result.h  mip_serialization.c  mip_serialization.h  mip_types.h
src/cpp/microstrain/: CMakeLists.txt  array_view.hpp  bits.hpp  embedded_time.hpp  index.hpp  logging.hpp  microstrain_all.hpp  platform.hpp  serialization.hpp  span.hpp  strings.hpp
src/cpp/mip/: CMakeLists.txt  mip.hpp  mip_all.hpp  mip_cmd_utils.cpp  mip_cmd_utils.hpp  mip_cmdqueue.hpp  mip_descriptors.hpp  mip_field.hpp  mip_interface.cpp  mip_interface.hpp  mip_logging.hpp  (+5 more)
src/mip/: CMakeLists.txt  mip.hpp  mip_all.h  mip_all.hpp  mip_cmdqueue.c  mip_cmdqueue.h  mip_cmdqueue.hpp  mip_descriptors.h  mip_descriptors.hpp  mip_device.c  mip_device.cpp  mip_device.h  mip_device.hpp  mip_dispatch.c  mip_dispatch.h  mip_field.c  mip_field.h  mip_field.hpp  mip_interface.c  mip_interface.cpp  mip_interface.h  mip_interface.hpp  mip_logger.c  mip_logger.h  mip_logging.c  mip_logging.h  mip_models.c  mip_models.h  mip_offsets.h  mip_packet.c  mip_packet.h  mip_packet.hpp  mip_parser.c  mip_parser.h  mip_parser.hpp  mip_result.c  mip_result.h  mip_result.hpp  mip_types.h
test/: CMakeLists.txt  framework_wrappers.cpp  framework_wrappers.hpp  microstrain_test.cpp  microstrain_test.hpp  test.c  test.h  test_serial.cpp  test_threaded_commands.cpp
test/c/: CMakeLists.txt  mip_cmocka.c  mip_cmocka.h  mip_unit_tests.c
test/channel_field_template/: .gitignore  CMakeLists.txt  ChannelField.cpp  ChannelField.hpp  Utils.cpp  Utils.hpp  main.cpp
test/cmocka/: CMakeLists.txt  cmocka.h
test/cpp/: CMakeLists.txt  logging.unit.cpp  mip.cpp  mip.integration.cpp  packet_interface.cpp  packet_interface.integration.cpp  parser_performance.cpp  strings.unit.cpp  test_mip_formatting.cpp  test_packet_interface.cpp
test/data/: packet_example_cpp_check.txt
test/microstrain_test/: CMakeLists.txt  doctest_wrappers.cpp  doctest_wrappers.hpp  microstrain_test.hpp
test/mip/: CMakeLists.txt  mip_packet_builder.c  mip_parser_performance.cpp  test_mip.cpp  test_mip_fields.c  test_mip_packet_builder.c  test_mip_parser.c  test_mip_random.c  test_time_utils.cpp  test_timestamp_manager.cpp
test/mip_extras/: CMakeLists.txt  test_time_utils.cpp
test/unity/: CMakeLists.txt
(+561 files in other folders)
